# resolvo-apt-solver

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commitlint.config.mjs
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  solver.rs
src/solver/: mod.rs  tests.rs
