[package]
name = "resolvo-apt-solver"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "An external dependency solver for APT backed by resolvo."
repository = "https://github.com/eviltak/resolvo-apt-solver"
readme = "README.md"
exclude = [".github", ".idea", ".release-plz.toml", "commitlint.config.mjs"]
authors = [
    "Arav Singhal <singhal.arav@gmail.com>"
]

[dependencies]
apt-edsp = "0.4.0"
resolvo = "0.7.0"

[dev-dependencies]
indoc = "2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
